test/syc/bad/duparg.c
/*
 * Duplicate argument identifier (function definition)
 */

int foo(int a, int a)
{
	return 0;
}
